# GitHoundSec

./: .gitignore  Dockerfile  README.md  main.py  mainguibkp  pyproject.toml  requirements.txt  secretscannerbkp
backend/: actions_audit.py  actions_permissions.py  apt_recon_scanner.py  git_directory_scanner.py  github_collector.py  graph_attack.py  phishing_template.py  pr_malicious.py  run_trufflehog_single.py  secret_scanner.py  shadow_repo_hijack.py  token_theft_action_injector.py  typosquat_detector.py  workflow_backdoor_pr.py  workflow_backdoor_pr_injector.py  workflow_exploit_finder.py  zombie_secrets_hunter.py
frontend/: main_gui.py
reports/: gitleaks-report.json
