[project]
name = "githoundsec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "jinja2>=3.1.6",
    "pygithub>=2.6.1",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "weasyprint>=65.1",
]
